[gd_scene load_steps=19 format=3 uid="uid://cp6owfmhuafe7"]

[ext_resource type="Script" uid="uid://bl1fmw64euaf6" path="res://Scripts/Objects/flame_strike.gd" id="1_2qbug"]
[ext_resource type="Texture2D" uid="uid://bv32n0wuuul1t" path="res://Effects/04.png" id="1_7nxfl"]
[ext_resource type="AudioStream" uid="uid://bis41whb0dwc2" path="res://SFX/WAV Files/SFX/Spells/Fireball 2.wav" id="3_2qbug"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kkxpm"]
atlas = ExtResource("1_7nxfl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqsnn"]
atlas = ExtResource("1_7nxfl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6e3i"]
atlas = ExtResource("1_7nxfl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wqgg"]
atlas = ExtResource("1_7nxfl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0e5b"]
atlas = ExtResource("1_7nxfl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4agr"]
atlas = ExtResource("1_7nxfl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bor4a"]
atlas = ExtResource("1_7nxfl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16exk"]
atlas = ExtResource("1_7nxfl")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn53j"]
atlas = ExtResource("1_7nxfl")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcf7e"]
atlas = ExtResource("1_7nxfl")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh313"]
atlas = ExtResource("1_7nxfl")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cgdg"]
atlas = ExtResource("1_7nxfl")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vimgs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkxpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqsnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6e3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0e5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4agr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bor4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16exk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn53j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcf7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh313")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cgdg")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhlhe"]
size = Vector2(57.3333, 53.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7tay"]
size = Vector2(13, 12)

[node name="Flame Strike" type="CharacterBody2D"]
script = ExtResource("1_2qbug")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vimgs")
speed_scale = 2.0

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2qbug")

[node name="HurtBox" type="Area2D" parent="."]

[node name="Box" type="CollisionShape2D" parent="HurtBox"]
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_jhlhe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_g7tay")
disabled = true

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
